--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@react-navigation/native": "^5.0.0-alpha.19",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-build-config": "^0.3.1",
+    "react-native-config": "^0.12.0",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.1",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2"
@@ -27,6 +31,7 @@
     "@babel/runtime": "^7.7.6",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
